syntax = "proto3";

package pools;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message RetireBaseDisksRequest {
    string ImageId = 1;
    string ZoneId = 2;
    bool UseBaseDiskAsSrc = 3;
    uint64 UseImageSize = 4;
}

message RetireBaseDisksTaskState {
    repeated string BaseDiskIds = 2;
}
